--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,3 +15,10 @@ html
       p.footer Made with ❤ by altan.me
   script 
       include js/click.js
+  // Google Tag Manager
+  script(async='', src='https://www.googletagmanager.com/gtag/js?id=G-VVX0N71ZPP')
+  script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VVX0N71ZPP');
