--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,5 @@ block layout-content
     div.wrapper
         div.hub
             h1
-                span.Details YAWMI: 
-                span#click.Details= message
+                span.ip IP
+                span#click= message
