--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,6 +18,7 @@ html
       block layout-content
   footer
     div
+      p.footer YAWMI = Yet Another Whats My IP
       p.footer Made with ❤ by altan.me
   script 
       include js/click.js
