Fix Copy to Clipboard
Added tooltip and refactored js for clipboard copy function

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,5 @@ block layout-content
     div.wrapper
         div.hub
             h1
-                span.ip IP
-                span#click= message
+                span.heading IP
+                span#click.ip(data-tooltip='Copy to Clipboard')= message
