--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,12 +7,7 @@ html
     title #{title} | YAWMI
     style
       include css/style.css
-  script(async='', src='https://www.googletagmanager.com/gtag/js?id=G-VVX0N71ZPP')
-  script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-VVX0N71ZPP');
+  script(src="https://cdn.counter.dev/script.js" data-id="726a18ea-8cca-48b9-a60a-2e39c4be7e60" data-utcoffset="12")
   body
     div
       block layout-content
