--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     title #{title} | YAWMI
     style
       include css/style.css
+    link(rel="shortcut icon", href="/favicon.ico")
   body
     div
       block layout-content
