--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title #{title} | YAWMI
+    title #{title}
     style
       include css/style.css
     link(rel="shortcut icon", href="/favicon.ico")
