--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,4 @@ block layout-content
         div.hub
             h1
                 span.heading IP
-                span#click.ip(data-tooltip='Copy to Clipboard')= message
+                span#click.ip(data-tooltip='Click to Copy')= message
