--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,3 +17,4 @@ html
       p.footer Made with ❤ by altan.me
   script 
       include js/click.js
+  script(async, src="https://track.app.altan.me/tracker.js", data-ackee-server="https://track.app.altan.me", data-ackee-domain-id="c1afda8c-31cc-415b-bade-eea39d93802f")
