--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,4 +17,4 @@ html
       p.footer Made with ❤ by altan.me
   script 
       include js/click.js
-  script(async, src="https://track.app.altan.me/tracker.js", data-ackee-server="https://track.app.altan.me", data-ackee-domain-id="c1afda8c-31cc-415b-bade-eea39d93802f")
+  script(async, src="https://app-analytics.net.altan.me/js/script.js", data-domain="ip.altan.me")
